Made prettier and added trailing 0s

--- a/popup.html
+++ b/popup.html
@@ -6,10 +6,21 @@
       body {
         margin: 10px;
         white-space: nowrap;
+        background-color: #282828;
       }
 
       h1 {
-        font-size: 45px;
+        margin-top: 80px;
+        font-size: 70px;
+        text-align: center;
+        color: white;
+      }
+
+      #time {
+        margin-top: 250px;
+        font-size: 75px;
+        text-align: center;
+        color: #00ff00;
       }
     </style>
 
@@ -17,7 +28,7 @@
   </head>
 
   <body>
-    <h1>MVHS NewTab</h1>
-    <p id="time">00:00:00</p>
+    <h1>Methodize</h1>
+    <p id="time">Loading...</p>
   </body>
 </html>
