Added separate newtab and popup files

--- a/newtab.html
+++ b/newtab.html
@@ -10,22 +10,21 @@
       }
 
       h1 {
-        margin-top: 0px;
-        font-size: 30px;
+        margin-top: 80px;
+        font-size: 70px;
         text-align: center;
         color: white;
       }
 
       #time {
-        margin-top: -10px;
-        margin-bottom: -10px;
-        font-size: 35px;
+        margin-top: 250px;
+        font-size: 75px;
         text-align: center;
         color: #00ff00;
       }
     </style>
 
-    <script src="popup.js"></script>
+    <script src="newtab.js"></script>
   </head>
 
   <body>
