--- a/newtab.html
+++ b/newtab.html
@@ -2,33 +2,28 @@
 <html>
   <head>
     <title>Methodize</title>
-    <style type="text/css">
-      body {
-        margin: 10px;
-        white-space: nowrap;
-        background-color: #282828;
-      }
-
-      h1 {
-        margin-top: 80px;
-        font-size: 70px;
-        text-align: center;
-        color: white;
-      }
-
-      #time {
-        margin-top: 250px;
-        font-size: 75px;
-        text-align: center;
-        color: #00ff00;
-      }
-    </style>
-
+    <link rel="stylesheet" type="text/css" href="newtab.css" />
     <script src="newtab.js"></script>
+    <script src="canvasjs.min.js"></script>
   </head>
 
   <body>
-    <h1>Methodize</h1>
-    <p id="time">Loading...</p>
+
+    <div id="main">
+
+      <div id="chartContainer" style="height: 370px; width: 100%;"></div>
+      <div id="mySidenav" class="sidenav">
+        <a href="http://methodize.me/">Methodize.me</a>
+        <a href="#">Settings</a>
+        <a href="#">Contact</a>
+      </div>
+
+      <span style="top:0;font-size:30px;cursor:pointer" id="menuButton">&#9776;</span>
+
+      <h1>Methodize</h1>
+      <p id="time"></p>
+
+    </div>
+
   </body>
 </html>
