Renamed files to index

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Methodize</title>
     <link rel="stylesheet" type="text/css" href="newtab.css" />
-    <script src="newtab.js"></script>
+    <script src="index.js"></script>
     <script src="canvasjs.min.js"></script>
   </head>
 
@@ -25,6 +25,8 @@
 
     <h1>Methodize</h1>
     <p id="time"></p>
+
+    <div id="extension-link"><a href="#">Install the extension!</a></div>
 
   </body>
 </html>
