--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Methodize</title>
-    <link rel="stylesheet" type="text/css" href="newtab.css" />
+    <link rel="stylesheet" type="text/css" href="index.css" />
     <script src="index.js"></script>
     <script src="canvasjs.min.js"></script>
   </head>
