--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Methodize</title>
+    <title>QuickBit</title>
     <link rel="stylesheet" type="text/css" href="index.css" />
     <script src="index.js"></script>
     <script src="canvasjs.min.js"></script>
@@ -16,7 +16,7 @@
     </div>
 
     <div id="mySidenav" class="sidenav">
-      <a href="http://methodize.me/">Methodize.me</a>
+      <a href="http://quickbit.me/">quickbit.me</a>
       <a href="#">Settings</a>
       <a href="#">Contact</a>
     </div>
